[build-system]
requires = [
    "setuptools>=61.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "serialtool"
version = "0.0.1760905718"
description = "Common functions for serial communication"
authors = [
    { name = "Justin Keogh", email = "github.com@v6y.net" },
]
dependencies = [
    "ipython",
    "asserttool @ git+https://github.com/jakeogh/asserttool",
    "attr",
    "serial",
    "clicktool @ git+https://github.com/jakeogh/clicktool",
    "timestamptool @ git+https://github.com/jakeogh/timestamptool",
    "eprint @ git+https://github.com/jakeogh/eprint",
    "globalverbose @ git+https://github.com/jakeogh/globalverbose",
]
requires-python = ">=3.11"

[project.license]
text = "ISC"

[project.urls]
Homepage = "https://github.com/jakeogh/serialtool"

[project.scripts]
serialtool = "serialtool.serialtool:cli"

[tool.setuptools]
include-package-data = true
zip-safe = false

[tool.setuptools.packages.find]
exclude = [
    "tests",
]

[tool.setuptools.package-data]
serialtool = [
    "py.typed",
]
