[build-system]
requires = ["setuptools>=61.0", "tomlkit"]
build-backend = "pep508_url_version_backend"
backend-path = ["."]

[project]
name = "serialtool"
version = "1!0.0.1784686780"
description = "Common functions for serial communication"
authors = [
    { name = "Justin Keogh", email = "github.com@v6y.net" },
]

dependencies = []
license = "ISC"
requires-python = ">=3.11"

[project.urls]
Homepage = "https://github.com/jakeogh/serialtool"

[project.scripts]
serialtool = "serialtool.serialtool:cli"

[tool.setuptools]
include-package-data = true
zip-safe = false

[tool.setuptools.packages.find]
exclude = [
    "tests",
]

[tool.setuptools.package-data]
serialtool = [
    "py.typed",
]

[tool.pep508-url-version-backend]
dependencies-indexed = ["ipython", "asserttool>=1!0.0.1784686069", "attr", "pyserial", "clicktool>=1!0.0.1784686757", "timestamptool>=1!0.0.1784686309", "eprint>=1!0.0.1784682565", "globalverbose>=1!0.0.1784686617"]
dependencies-git = [
	"ipython",
	"asserttool @ git+https://github.com/jakeogh/asserttool",
	"attr",
	"pyserial",
	"clicktool @ git+https://github.com/jakeogh/clicktool",
	"timestamptool @ git+https://github.com/jakeogh/timestamptool",
	"eprint @ git+https://github.com/jakeogh/eprint",
	"globalverbose @ git+https://github.com/jakeogh/globalverbose"]
index-urls = ["jakeogh.github.io", "pip-index"]
